--- a/package.json
+++ b/package.json
@@ -3,10 +3,22 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "watch": "npm-watch",
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
+  },
+  "watch": {
+    "build": {
+      "patterns": [
+        "pages",
+        "interfaces",
+        "hooks",
+        "styles"
+      ],
+      "extensions": "js,jsx,ts,tsx"
+    }
   },
   "dependencies": {
     "@emotion/react": "^11.10.5",
@@ -21,6 +33,7 @@
     "eslint": "8.30.0",
     "eslint-config-next": "13.1.1",
     "next": "13.1.1",
+    "npm-watch": "^0.11.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "typescript": "4.9.4"
